# davhome

./: .dockerignore  .env.example  .envrc  .gitignore  AGENTS.md  CALDAV_RADICALE_PARITY_CHECKLIST.md  Cargo.toml  Dockerfile  FCIS_RFC.md  FCIS_TESTING_MAP.md  FCIS_VERIFICATION.md  PLAN.md  README.md  SYNC_PLAN.md  deploy.sh  docker-compose.yml  flake.nix  justfile  last-test-run.txt  pyproject.toml  radicale-test-suite.txt  startup.sh
.docker/: Dockerfile.test  compose.test.yml  seed-test-data.sh
.sisyphus/: boulder.json
.sisyphus/evidence/: remove-fbv-wrappers-django-test.txt  rename-dav-helper-modules-django-test.txt  task-1-caldavtester.txt  task-1-django-test.txt  task-1-litmus-test.txt  task-10-caldavtester.txt  task-10-django-test.txt  task-11-django-test.txt  task-12-django-test.txt  task-13-caldavtester.txt  task-13-django-test.txt  task-13-litmus.txt  task-14-caldavtester.txt  task-14-django-test.txt  task-14-litmus.txt  task-15-django-test.txt  task-16-full-verify.txt  task-2-django-test.txt  task-3-django-test.txt  task-4-django-test.txt  task-5-reference-map.txt  task-6-django-test.txt  task-7-django-test.txt  task-8-django-test.txt  task-9-django-test.txt
.sisyphus/plans/: dav-cbv-refactor.md
.sqlx/: query-01bd3e50871ea112818ed4b61900576307d61f15db0c028a4b714139080e9016.json  query-2b5011c5f324623f5cfc5bc13a127fe3fc52d91a1e7639c748675258d89b0434.json  query-3f56b07a90c36c72d9a3f95942c1fb289fe85d6bdeaf30270c14b125515ae8a5.json  query-82480b2f98a6c74decf5cbeb38c1ef2fd61b9916ef3102cf9a5f8670dfa4ad25.json  query-a020360a7487e9db3bc7c55eab247bb2106a1570a66576bbc1ca1dcd99234544.json
RFC/: 4791-caldav.txt  4918-webdav.txt  5397-current-principal-extension.txt  6764-service-discovery.txt
accounts/: forms.py  tests.py  urls.py  views.py
caldavtester-lab/: .env-py2.sh  README.md  bootstrap.sh  caldav-suite-modules.txt
caldavtester-lab/ccs-caldavtester/: README.md  setup.py  testcaldav.py
caldavtester-lab/ccs-pycalendar/: setup.py
calendars/: admin.py  forms.py  models.py  permissions.py  test_setup_integration_fixtures.py  tests.py  urls.py  views.py
calendars/migrations/: 0001_initial.py  0002_calendarshare_accepted_at.py  0003_calendarobjectchange.py  0004_calendar_component_kind_calendar_sort_order.py  0005_calendarobject_dead_properties.py
config/: settings.py  settings_dev.py  settings_test.py  urls.py
dav/: apps.py  auth.py  common.py  entrypoints.py  middleware.py  report_engine.py  report_handlers.py  resolver.py  test_core_calendar_data.py  test_core_contracts.py  test_core_davxml.py  test_core_filters.py  test_core_paths_props_freebusy.py  test_core_query.py  test_core_recurrence.py  test_core_report.py  test_core_time.py  test_core_write_ops.py  test_resolver.py  test_shell_adapters.py  test_view_helpers_copy_move_flow.py  test_view_helpers_freebusy.py  test_view_helpers_recurrence_serialization.py  test_view_helpers_report_paths.py  tests.py  urls.py  views.py  views_collections.py  views_common.py  views_objects.py  views_reports.py  xml.py
dav/cbv/: __init__.py  base.py  mixins.py  root.py
dav/core/: __init__.py  calendar_data.py  contracts.py  davxml.py  filters.py  freebusy.py  paths.py  payloads.py  propmap.py  props.py  query.py  recurrence.py  report.py  report_dispatch.py  sync.py  time.py  write_ops.py
dav/reports/: __init__.py  engine.py  handlers.py
dav/shell/: __init__.py  http.py  repository.py
dav/tests/: test_core_additional_more.py  test_core_calendar_data.py  test_core_freebusy.py  test_core_payloads.py  test_core_propmap.py  test_core_query_more.py  test_core_recurrence.py  test_core_report.py  test_core_report_dispatch.py  test_core_sync.py  test_core_time.py  test_core_write_ops.py  test_endpoints.py  test_misc_low_coverage_modules.py  test_module_shims.py  test_report_handlers_more.py  test_view_calendar_collection.py  test_view_calendar_home_principal_uid.py  test_view_calendar_object.py  test_view_helpers_calendar_mutation_payloads.py  test_view_helpers_copy_move.py  (+8 more)
migrations/: 20260329000001_create_users_table.sql  20260329000002_create_calendars_table.sql  20260329000003_create_calendar_bindings_table.sql  20260329000004_create_calendar_shares_table.sql  20260329000005_create_calendar_changes_table.sql  20260329000006_create_calendar_objects_table.sql
src/: auth.rs  custom_method_router.rs  dav_method.rs  db.rs  forms.rs  lib.rs  main.rs
templates/: base.html  calendars.html  home.html  index.html  signin.html  signup.html
tests/: http_auth.rs  http_calendars.rs  http_dav.rs  repository_calendars.rs  repository_users.rs
(+209 files in other folders)
