[project]
name = "davhome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "gunicorn>=23.0.0",
    "icalendar>=6.3.1",
    "psycopg[binary]>=3.2.6",
    "recurring-ical-events>=3.8.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
]

[tool.coverage.run]
branch = true
source = [
    "accounts",
    "calendars",
    "dav",
]

[tool.coverage.report]
fail_under = 54
show_missing = true
skip_covered = false
omit = [
    "*/migrations/*",
    "*/tests.py",
    "manage.py",
]
