[project]
name = "davhome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "gunicorn>=23.0.0",
    "icalendar>=6.3.1",
    "psycopg[binary]>=3.2.6",
    "recurring-ical-events>=3.8.0",
    "ruff>=0.15.2",
    "ty>=0.0.24",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "django-stubs[compatible-mypy]>=6.0.1",
    "types-icalendar>=6.3.1.20260301",
]

[tool.coverage.run]
branch = true
source = [
    "accounts",
    "calendars",
    "dav",
]

[tool.coverage.report]
fail_under = 69
show_missing = true
skip_covered = false
omit = [
    "*/migrations/*",
    "*/tests.py",
    "manage.py",
]

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.ty.src]
include = [
    "accounts",
    "calendars",
    "config",
    "dav",
    "manage.py",
]
exclude = [
    "**/migrations/**",
    "caldavtester-lab/**",
]

[[tool.ty.overrides]]
include = [
    "**/tests/**",
    "**/test_*.py",
]

[tool.ty.overrides.rules]
all = "ignore"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
packages = ["accounts", "calendars", "config", "dav"]
exclude = [
    '(^|/).*migrations/.*$',
    '(^|/)caldavtester-lab/.*$',
    '(^|/).*tests/.*$',
    '(^|/).*tests\.py$',
    '(^|/)test_.*\.py$',
]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "icalendar",
    "recurring_ical_events",
    "recurring_ical_events.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings_test"
